fixing alignments

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -26,9 +26,4 @@ a {
   .user-name {
     display: none;
   }
-
-  .logo {
-    margin-left: 2em;
-    margin-right: 2em;
-  }
 }
